<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.continuous-security-tools</groupId>
    <artifactId>zap-java-integration</artifactId>
    <version>0.4.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ZAP Java Integration</name>
    <description>Java Integration for OWASP ZAP</description>
    <url>https://github.com/ContinuousSecurityTooling/zap-maven-plugin</url>

    <modules>
        <module>zap-utils</module>
        <module>zap-client-api</module>
        <module>zap-report-parser</module>
    </modules>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>hypery2k</id>
            <name>Martin Reinhardt</name>
            <email>contact@martinreinhardt-online.de</email>
        </developer>
        <developer>
            <id>tfcporciuncula</id>
            <name>Thiago Porciúncula</name>
            <email>thiago.porciuncula@softplan.com.br</email>
            <organization>Softplan</organization>
        </developer>
        <developer>
            <id>fabio.resner</id>
            <name>Fábio Resner</name>
            <email>fabio.resner@softplan.com.br</email>
            <organization>Softplan</organization>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:ContinuousSecurityTooling/zap-maven-plugin.git</connection>
        <developerConnection>scm:git:git@github.com:ContinuousSecurityTooling/zap-maven-plugin.git</developerConnection>
        <url>https://github.com/ContinuousSecurityTooling/zap-maven-plugin</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/ContinuousSecurityTooling/zap-maven-plugin/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Travis</system>
        <url>https://travis-ci.org/ContinuousSecurityTooling/zap-maven-plugin</url>
    </ciManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
        <surefire.argLine/>

        <sonar.projectKey>ContinuousSecurityTooling_zap-java</sonar.projectKey>
        <sonar.organization>continuoussecuritytooling</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <!-- Point the Sonar Qube Plugin always to the same aggregated JaCoCo report -->
        <sonar.coverage.jacoco.xmlReportPaths>
          ${project.basedir}/../zap-client-api/target/site/jacoco/jacoco.xml,
          ${project.basedir}/../zap-report-parser/target/site/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>

        <!-- Maven plugins versions -->
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-javadoc-plugin.version>3.8.0</maven-javadoc-plugin.version>
        <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
        <maven-failsafe-plugin.version>3.3.1</maven-failsafe-plugin.version>
        <maven-plugin-plugin.version>3.13.1</maven-plugin-plugin.version>
        <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
        <nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
        <maven-plugin.gitflow.version>1.21.0</maven-plugin.gitflow.version>
        <maven-snyk-plugin.version>2.3.0</maven-snyk-plugin.version>

        <!-- Dependencies versions -->
        <zap-api-java.version>1.14.0</zap-api-java.version>
        <jdom.version>1.1.1</jdom.version>
        <selenium.version>4.22.0</selenium.version>
        <phantomjsdriver.version>1.5.0</phantomjsdriver.version>
        <commons-lang.version>3.16.0</commons-lang.version>
        <commons-io.version>2.16.1</commons-io.version>
        <commons-configuration.version>1.10</commons-configuration.version>
        <maven-plugin-api.version>3.9.8</maven-plugin-api.version>
        <maven-plugin-annotations.version>3.13.1</maven-plugin-annotations.version>
        <slf4j.version>2.0.15</slf4j.version>
        <logback.version>1.5.6</logback.version>
        <jacoco.version>0.8.12</jacoco.version>
        <testng.version>7.10.2</testng.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jopendocument</groupId>
                <artifactId>jdom</artifactId>
                <version>${jdom.version}</version>
            </dependency>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-java</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>htmlunit3-driver</artifactId>
                <version>${selenium.version}</version>
            </dependency>
            <dependency>
                <groupId>com.codeborne</groupId>
                <artifactId>phantomjsdriver</artifactId>
                <version>${phantomjsdriver.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-configuration</groupId>
                <artifactId>commons-configuration</artifactId>
                <version>${commons-configuration.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-plugin-api</artifactId>
                <version>${maven-plugin-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugin-tools</groupId>
                <artifactId>maven-plugin-annotations</artifactId>
                <version>${maven-plugin-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
            </dependency>

            <!-- Project modules version -->
            <dependency>
                <groupId>net.continuous-security-tools</groupId>
                <artifactId>zap-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.continuous-security-tools</groupId>
                <artifactId>zap-client-api</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <defaultGoal>install</defaultGoal>
        <pluginManagement>
            <plugins>
                <!-- Define the Java version -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <compilerArgs>
                            <compilerArg/>
                            <arg>--add-exports</arg>
                            <arg>java.xml/com.sun=ALL-UNNAMED</arg>
                            <arg>--add-exports</arg>
                            <arg>java.xml/com.sun.org.apache.xerces.internal.impl.io=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <!-- Snyk -->

                <plugin>
                    <groupId>io.snyk</groupId>
                    <artifactId>snyk-maven-plugin</artifactId>
                    <version>${maven-snyk-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>snyk-test</id>
                            <phase>test</phase>
                            <goals>
                                <goal>test</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>snyk-monitor</id>
                            <phase>install</phase>
                            <goals>
                                <goal>monitor</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <apiToken>${SNYK_API_TOKEN}</apiToken>
                        <failOnSeverity>medium</failOnSeverity>
                        <org/>
                    </configuration>
                </plugin>

                <!-- Integration tests execution -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <!-- Enabling Java annotations for Maven plugin development -->
                <!-- (http://maven.apache.org/plugin-tools/maven-plugin-plugin/examples/using-annotations.html) -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>${maven-plugin-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>default-descriptor</id>
                            <phase>process-classes</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <threadCount>1</threadCount>
                    <perCoreThreadCount>false</perCoreThreadCount>
                    <argLine>
                        @{surefire.argLine}  --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>${maven-plugin.gitflow.version}</version>
                <configuration>
                    <gitFlowConfig>
                        <productionBranch>main</productionBranch>
                        <developmentBranch>develop</developmentBranch>
                        <featureBranchPrefix>feature/</featureBranchPrefix>
                        <releaseBranchPrefix>release/</releaseBranchPrefix>
                        <hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
                        <supportBranchPrefix>support/</supportBranchPrefix>
                        <versionTagPrefix>v</versionTagPrefix>
                        <origin>origin</origin>
                    </gitFlowConfig>
                    <keepBranch>false</keepBranch>
                    <pushReleases>false</pushReleases>
                    <pushRemote>false</pushRemote>
                    <skipReleaseMergeProdBranch>true</skipReleaseMergeProdBranch>
                    <releaseMergeFFOnly>true</releaseMergeFFOnly>
                    <releaseMergeNoFF>false</releaseMergeNoFF>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.versioneye</groupId>
                <artifactId>versioneye-maven-plugin</artifactId>
                <version>3.11.4</version>
                <configuration>
                    <projectId>5a22d1f20fb24f5104b0327d</projectId>
                    <organisation>hypery2k_orga</organisation>
                    <team>Owners</team>
                </configuration>
            </plugin>

            <!-- Coverage metering -->
            <plugin>
              <groupId>org.jacoco</groupId>
              <artifactId>jacoco-maven-plugin</artifactId>
              <version>${jacoco.version}</version>
              <executions>
                <execution>
                  <goals>
                    <goal>prepare-agent</goal>
                  </goals>
                          <configuration>
                              <propertyName>surefire.argLine</propertyName>
                          </configuration>
                </execution>
                <!-- attached to Maven test phase -->
                <execution>
                  <id>report</id>
                  <phase>test</phase>
                  <goals>
                    <goal>report</goal>
                  </goals>
                          <configuration>
                              <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
                          </configuration>
                </execution>
              </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${maven-source-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${maven-javadoc-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven-gpg-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>${nexus-staging-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
